@@ -1,93 +1,71 @@
 package br.org.cria.splinkerapp.parsers;
 
-import java.io.File;
+import br.org.cria.splinkerapp.utils.StringStandards;
+import io.sentry.Sentry;
+import org.apache.commons.lang3.StringUtils;
+import org.apache.poi.ss.usermodel.*;
+import org.apache.poi.xssf.usermodel.XSSFWorkbook;
+
 import java.io.FileInputStream;
 import java.sql.Connection;
-import java.time.LocalDate;
-import java.time.format.DateTimeFormatter;
+import java.text.SimpleDateFormat;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Stream;
-
-import org.apache.commons.lang3.StringUtils;
-import org.dhatim.fastexcel.reader.*;
-import br.org.cria.splinkerapp.utils.StringStandards;
-import io.sentry.Sentry;
+import java.util.stream.Collectors;
 
 public class XLSXFileParser extends FileParser {
 
-    ReadableWorkbook wb;
-    String fileSourcePath;
-    Stream<Sheet> sheets;
+    private Workbook workbook;
+    private String fileSourcePath;
 
-    public XLSXFileParser(String fileSourchPath) throws Exception {
+    public XLSXFileParser(String fileSourcePath) throws Exception {
         super();
-        this.fileSourcePath = fileSourchPath;
-        var file = new File(fileSourcePath);
-        var stream = new FileInputStream(file);
-        wb = new ReadableWorkbook(stream);
-        sheets = wb.getSheets();
+        this.fileSourcePath = fileSourcePath;
+        org.apache.poi.openxml4j.util.ZipSecureFile.setMinInflateRatio(0.0);
     }
 
     @Override
     protected String buildCreateTableCommand(Set<String> tabelas) throws Exception {
+        try (FileInputStream fis = new FileInputStream(fileSourcePath)) {
+            workbook = new XSSFWorkbook(fis);
+        }
+        StringBuilder builder = new StringBuilder();
 
-        var builder = new StringBuilder();
-        sheets.forEach((sheet) -> {
-            try {
-                var tableName = StringStandards.normalizeString(sheet.getName());
-                dropTable(tableName);
-                if (tabelas != null && !tabelas.contains(tableName.toLowerCase())) return;
+        for (Sheet sheet : workbook) {
+            String tableName = StringStandards.normalizeString(sheet.getSheetName());
+            dropTable(tableName);
 
-                var headerRow = sheet.openStream().findFirst().get();
-                builder.append("CREATE TABLE IF NOT EXISTS %s (".formatted(tableName));
-                var fieldCount = headerRow.getCellCount();
-                for (int i = 0; i < fieldCount; i++) {
-                    var cell = headerRow.getCell(i);
-                    String cellValue = "";
-                    try {
-                        cellValue = cell.asString();
-                    } catch (Exception e) {
-                        if (cell != null) {
-                            cellValue = cell.toString();
-                        }
-                    }
-                    if (cellValue != null && cellValue.startsWith("[FORMULA")) {
-                        int startIndex = cellValue.indexOf("\"");
-                        int endIndex = cellValue.lastIndexOf("\"");
-                        if (startIndex != -1 && endIndex != -1 && endIndex > startIndex) {
-                            cellValue = cellValue.substring(startIndex + 1, endIndex);
-                        }
-                    }
-                    if (!StringUtils.isEmpty(cellValue)) {
-                        String columnName = makeColumnName(cellValue);
-                        builder.append("%s VARCHAR(1),".formatted(columnName));
-                    }
-                }
-                builder.append(");");
-            } catch (Exception e) {
-                throw new RuntimeException(e);
+            if (tabelas != null && !tabelas.contains(tableName.toLowerCase())) {
+                continue;
             }
-        });
 
-        var command = builder.toString().replace(",);", ");");
+            Row headerRow = sheet.getRow(0);
+            if (headerRow == null) continue;
 
-        return command;
+            builder.append("CREATE TABLE IF NOT EXISTS %s (".formatted(tableName));
+
+            for (Cell cell : headerRow) {
+                String cellValue = getCellStringValue(cell);
+                if (!StringUtils.isEmpty(cellValue)) {
+                    String columnName = makeColumnName(cellValue);
+                    builder.append("%s VARCHAR(1),".formatted(columnName));
+                }
+            }
+            builder.append(");");
+        }
+
+        return builder.toString().replace(",);", ");");
     }
 
     @Override
-    protected List<String> getRowAsStringList(Object row, int numberOfColumns) {
-        var fullRow = (Row) row;
-        var arr = new String[numberOfColumns];
+    protected List<String> getRowAsStringList(Object rowObj, int numberOfColumns) {
+        Row row = (Row) rowObj;
+        String[] arr = new String[numberOfColumns];
 
         for (int colNum = 0; colNum < numberOfColumns; colNum++) {
-            Cell cell = fullRow.getCell(colNum);
-            String cellValue = "";
-            if (cell != null) {
-                cellValue = cell.getRawValue();
-            }
-            arr[colNum] = cellValue;
+            Cell cell = row.getCell(colNum, Row.MissingCellPolicy.RETURN_BLANK_AS_NULL);
+            arr[colNum] = getCellStringValue(cell);
         }
 
         return Arrays.asList(arr);
@@ -95,72 +73,58 @@ public class XLSXFileParser extends FileParser {
 
     @Override
     public void insertDataIntoTable(Set<String> tabelas) throws Exception {
-        Connection conn;
-        try {
-            sheets = wb.getSheets();
-            conn = getConnection();
+        try (Connection conn = getConnection()) {
             conn.setAutoCommit(false);
-            var woorkbookIterator = sheets.iterator();
 
-            while (woorkbookIterator.hasNext()) {
-
-                var sheet = woorkbookIterator.next();
-                var lines = sheet.read();
-                var headerRow = lines.get(0);
-                var tableName = StringStandards.normalizeString(sheet.getName());
+            for (Sheet sheet : workbook) {
+                String tableName = StringStandards.normalizeString(sheet.getSheetName());
                 if (tabelas != null && !tabelas.contains(tableName.toLowerCase())) continue;
-                totalColumnCount = headerRow.getCellCount();
+
+                Row headerRow = sheet.getRow(0);
+                if (headerRow == null) continue;
+
+                totalColumnCount = headerRow.getPhysicalNumberOfCells();
                 totalRowCount = 0;
 
                 List<String> columns = getRowAsStringList(headerRow, totalColumnCount).stream()
                         .map(this::makeColumnName)
                         .filter(col -> col != null && !col.trim().isEmpty())
-                        .toList();
+                        .collect(Collectors.toList());
 
-                var valuesStr = "?,".repeat(columns.size());
-                var columnNames = String.join(",", columns);
-                var command = insertIntoCommand.formatted(tableName, columnNames, valuesStr)
+                String valuesStr = "?,".repeat(columns.size());
+                String columnNames = String.join(",", columns);
+                String command = insertIntoCommand.formatted(tableName, columnNames, valuesStr)
                         .replace(",)", ")");
+
                 var statement = conn.prepareStatement(command);
-                //sublist exclui o elemento na posição toIndex;
-                var rows = lines.subList(1, lines.size());
-                rows.stream().filter(row -> row != null && row.getCellCount() != 0 && !isRowEmpty(row)).forEach((row) ->
-                {
-                    try {
-                        for (int i = 0; i < columns.size(); i++) {
-                            Cell cell = null;
-                            try {
-                                cell = row.getCell(i);
-                            } catch (Exception ignored) {
 
-                            }
-                            var isNullCell = cell == null;
-                            var value = isNullCell ? "" : getCellValue(cell.getRawValue());
-                            statement.setString(i + 1, value);
-                        }
-                        statement.addBatch();
-                        currentRow++;
-                        totalRowCount ++;
-                        if (currentRow % 10_000 == 0) {
-                            statement.executeBatch();
-                            conn.commit();
-                            statement.clearBatch();
+                for (int rowIndex = 1; rowIndex <= sheet.getLastRowNum(); rowIndex++) {
+                    Row row = sheet.getRow(rowIndex);
+                    if (row == null || isRowEmpty(row)) continue;
 
-                        }
-                        readRowEventBus.post(currentRow);
-
-                    } catch (Exception e) {
-                        throw new RuntimeException(e);
+                    for (int i = 0; i < columns.size(); i++) {
+                        Cell cell = row.getCell(i, Row.MissingCellPolicy.RETURN_BLANK_AS_NULL);
+                        statement.setString(i + 1, getCellStringValue(cell));
                     }
-                });
+
+                    statement.addBatch();
+                    currentRow++;
+                    totalRowCount++;
+
+                    if (currentRow % 10_000 == 0) {
+                        statement.executeBatch();
+                        conn.commit();
+                        statement.clearBatch();
+                    }
+                    readRowEventBus.post(currentRow);
+                }
+
                 statement.executeBatch();
                 conn.commit();
-                statement.clearBatch();
                 statement.close();
             }
 
             conn.setAutoCommit(true);
-            conn.close();
         } catch (Exception e) {
             Sentry.captureException(e);
             e.printStackTrace();
@@ -169,19 +133,59 @@ public class XLSXFileParser extends FileParser {
     }
 
     private boolean isRowEmpty(Row row) {
-        if (row == null) {
-            return true;
-        }
-
+        if (row == null) return true;
         for (Cell cell : row) {
-            var isNullCell = cell == null;
-            var value = isNullCell ? "" : getCellValue(cell.getRawValue());
-            if (!value.isEmpty()) {
-                return false;
-            }
+            if (!getCellStringValue(cell).isEmpty()) return false;
         }
-
         return true;
     }
 
+    /**
+     * Retorna valor da célula como String, detectando datas automaticamente.
+     */
+    private String getCellStringValue(Cell cell) {
+        if (cell == null) return "";
+
+        switch (cell.getCellType()) {
+            case STRING:
+                return cell.getStringCellValue().trim();
+
+            case NUMERIC:
+                if (DateUtil.isCellDateFormatted(cell)) {
+                    return new SimpleDateFormat("dd/MM/yyyy").format(cell.getDateCellValue());
+                } else {
+                    double numericValue = cell.getNumericCellValue();
+                    if (numericValue == Math.floor(numericValue)) {
+                        if (numericValue <= Integer.MAX_VALUE && numericValue >= Integer.MIN_VALUE) {
+                            return String.valueOf((int) numericValue);
+                        } else {
+                            return String.valueOf((long) numericValue);
+                        }
+                    } else {
+                        return String.valueOf(numericValue);
+                    }
+                }
+
+            case BOOLEAN:
+                return String.valueOf(cell.getBooleanCellValue());
+
+            case FORMULA:
+                FormulaEvaluator evaluator = workbook.getCreationHelper().createFormulaEvaluator();
+                CellValue cellValue = evaluator.evaluate(cell);
+                return switch (cellValue.getCellType()) {
+                    case STRING -> cellValue.getStringValue();
+                    case NUMERIC -> {
+                        if (DateUtil.isCellDateFormatted(cell)) {
+                            yield cell.getLocalDateTimeCellValue().toString();
+                        }
+                        yield String.valueOf(cellValue.getNumberValue());
+                    }
+                    case BOOLEAN -> String.valueOf(cellValue.getBooleanValue());
+                    default -> "";
+                };
+            case BLANK:
+            default:
+                return "";
+        }
+    }
 }
